# test-workflow

./: .pr_agent.toml  README.md  mkdocs.yml  pyproject.toml  setup.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: assets_pr_labeler.yml  dev_versioning.yml  docs_regulator.yml  pr_agent.yml  release.yml
docs/: docs.md  index.md
src/batch-file-/: .env.example  .gitignore  Dockerfile  docker-compose.yml
src/batch-file-/ppfl_python_worker/: candidate_search_producer.py
src/batch-file-/ppfl_python_worker/analysis/: analyzer.py
src/batch-file-/ppfl_python_worker/csw/: __init__.py  celery_app.py  consumer.py  tasks.py
